# call-center

./: README.md  dart_class_diagram  pubspec.yaml  test.uml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
app/app_library/: CMakeLists.txt  hello.cpp  hello.def  hello.h
app/lib/: main.dart
app/lib/src/core/models/: call.dart  (+3 more)
app/macos/: libhello.dylib
app/macos/Runner.xcodeproj/: project.pbxproj
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: listtest.dart  main.dart
lib/src/core/: utils.dart  values.dart
lib/src/core/abstraction/: AgentBase.dart  CallBase.dart  ClientBase.dart  DateBase.dart  Employee.dart  MDuration.dart  MList.dart  WeekSchedule.dart
lib/src/core/enum/: AgentPopupMenu.dart  AgentSpecialty.dart  DataType.dart  FilterAgents.dart
lib/src/core/models/: Agent.dart  Call.dart  DataInformation.dart  Date.dart  client.dart
lib/src/core/structures/: MLinkedList.dart  MLinkedListNode.dart  MListNode.dart  MSimpleList.dart
lib/src/providers/: DiskProvider.dart
lib/src/screens/: agent_screen.dart  dashboard_screen.dart  home_screen.dart
lib/src/screens/agent/: AgentsPage.dart
lib/src/widgets/: AddAgentDialog.dart  AddCallDialog.dart  AddClientDialog.dart  Badge.dart  CardAgent.dart  CardClient.dart  ConfirmationDialog.dart  DashboardCard.dart
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: Info.plist  MainFlutterWindow.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
(+2 files in other folders)
